FEDERATE-73, FEDERATE-74 correcting DataTypeTransformer and fixing code issues found by FindBugs.