@@ -1,28 +1,55 @@
+/*
+ * JBoss, Home of Professional Open Source.
+ * Copyright (C) 2008 Red Hat, Inc.
+ * Copyright (C) 2000-2007 MetaMatrix, Inc.
+ * Licensed to Red Hat, Inc. under one or more contributor 
+ * license agreements.  See the copyright.txt file in the
+ * distribution for a full listing of individual contributors.
+ * 
+ * This library is free software; you can redistribute it and/or
+ * modify it under the terms of the GNU Lesser General Public
+ * License as published by the Free Software Foundation; either
+ * version 2.1 of the License, or (at your option) any later version.
+ * 
+ * This library is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
+ * Lesser General Public License for more details.
+ * 
+ * You should have received a copy of the GNU Lesser General Public
+ * License along with this library; if not, write to the Free Software
+ * Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA
+ * 02110-1301 USA.
+ */
+
 package com.metamatrix.jdbc;
 
 import java.sql.Clob;
-import java.sql.Date;
 import java.sql.SQLException;
 
-import com.metamatrix.common.types.ClobImpl;
-
 import junit.framework.TestCase;
+
+import com.metamatrix.common.types.ClobImpl;
 
 public class TestDataTypeTransformer extends TestCase {
 	
 	public void testClobToStringConversion() throws Exception {
 		Clob clob = new ClobImpl("foo".toCharArray()); //$NON-NLS-1$
-		String value = DataTypeTransformer.transform(clob, String.class, "String"); //$NON-NLS-1$
+		String value = DataTypeTransformer.getString(clob); //$NON-NLS-1$
 		assertEquals("foo", value); //$NON-NLS-1$
 	}
 	
 	public void testInvalidTransformation() throws Exception {
 		try {
-			DataTypeTransformer.transform(new Integer(1), Date.class, "Date"); //$NON-NLS-1$
+			DataTypeTransformer.getDate(Integer.valueOf(1)); 
 			fail("exception expected"); //$NON-NLS-1$
 		} catch (SQLException e) {
 			assertEquals("Unable to transform the column value 1 to a Date.", e.getMessage()); //$NON-NLS-1$
 		}
+	}
+	
+	public void testGetByte() throws Exception {
+		assertEquals(0, DataTypeTransformer.getShort(null));
 	}
 
 }
